Archive2/4d/1db7c1d3269b9e/output
main.cpp:17:20: error: expected ';' at end of member declaration
     list(Xs&&... xs)
                    ^
main.cpp: In lambda function:
main.cpp:35:24: error: missing template arguments before '(' token
             return list(x..., y...);  
                        ^
main.cpp: In lambda function:
main.cpp:46:24: error: missing template arguments before '(' token
             return list(f(x)...);  
                        ^
main.cpp: In function 'int main(int, char**)':
main.cpp:67:19: error: missing template arguments before '(' token
     auto xs = list(1, "2", 3, 4.5);
                   ^
